--- a/css/page/_features.scss
+++ b/css/page/_features.scss
@@ -6,6 +6,9 @@
     background-color: $magnoliaWhite-color;
     box-shadow: 0 5px 8px $jet-color;
 }
+.MobileView{
+    display:None;
+}
 
 @keyframes FadeIn {
     0% {
@@ -58,10 +61,12 @@
     margin: 10px auto;
 
 }
-.animateFadein{
+
+.animateFadein {
     animation-name: FadeIn;
     animation-duration: 2s;
 }
+
 .featureInfo {
     padding: 20px;
     width: 50%;
@@ -73,4 +78,56 @@
 
 .title {
     text-align: center;
+}
+
+@media screen and (max-width: 800px) {
+    .MobileView{display:block}
+    .title{
+        margin:40px;
+        padding:20px;
+    }
+    .featureContainer {
+        flex-direction: column;
+        width:90%;
+        margin:20px auto;
+        .featureInfo {
+            width: 90%;
+        }
+        .item{
+            width:90%;
+        }
+    }
+
+    .buttonContainer{
+        display:None;
+    }
+
+}
+
+@media screen and (max-width: 600px) {
+    .MobileView{display:block}
+    .title{
+        padding:10px;
+        text-align: center;
+        font-size: 40px;
+
+    }
+    .featureContainer {
+        flex-direction: column;
+        width:90%;
+        box-shadow: none;
+        .featureInfo {
+            width: 70%;
+            margin:0;
+        }
+        .item{
+            margin:0;
+            width:95%;
+            padding:10px;
+        }
+    }
+
+    .buttonContainer{
+       display: none;
+    }
 }
