--- a/css/page/_features.scss
+++ b/css/page/_features.scss
@@ -4,7 +4,8 @@
     margin: 50px auto;
     width: 70%;
     background-color: $magnoliaWhite-color;
-    box-shadow: 0 5px 8px $jet-color;
+    box-shadow: 0 3px 5px $jet-color;
+    border-radius: 20px;
 }
 .MobileView{
     display:None;
@@ -74,6 +75,7 @@
 
 .featureImage {
     width: 100%;
+    border-radius: 20px;
 }
 
 .title {
