--- a/css/page/_about.scss
+++ b/css/page/_about.scss
@@ -18,7 +18,7 @@
     margin: 0;
     padding: 0;
     width: 100%;
-    right: 0;
+    top: 0;
     left:0
 }
 
@@ -75,10 +75,6 @@
         padding: 50px 35px;
     }
 
-    .p3 {
-        padding: 50px 35px;
-    }
-
     .p4 {
         padding: 50px 40px;
     }
@@ -90,10 +86,6 @@
     .p6 {
         padding: 50px 45px;        
     
-    }
-
-    .p7 {
-        padding: 50px 30px;
     }
 
 }
@@ -146,9 +138,7 @@
     background-color: $maximumBluePurple-color;
 }
 
-.b4 {
-    background-color: $blueJean-color;
-}
+
 
 .infoContents {
     background-color: $platinum-color;
@@ -179,11 +169,12 @@
 
 .item {
     padding: 10px;
-    margin: 5px;
+    // margin: 5px;
 }
 
 .infoText {
     width: 50%;
+    height:250px;
 }
 
 .infoImage {
@@ -243,12 +234,12 @@
     margin:40px auto;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 800px) {
     .infoContainer{    
         flex-direction: column;
         width:100%;
-        padding:0;
-        margin:0;
+        padding:10px;
+        margin:auto;
     }
     .title{
         font-size:40px;
@@ -256,23 +247,32 @@
     }
     .MobileViewAbout{
         display: block;
+        .infoTitle{
+            padding:10px;
+            text-align: center;
+            margin: 10px auto;
 
+        }
         .infoContents{
             width:90%;
             padding:5px;
         }
-        .item{
-            width:95%;
-            padding:10px;
-        
+        .infoText,.infoImage {
+            height:fit-content;
+            width:90%;
+            padding:5px;
+            text-align: center;
         }
-        img{
-            border-radius:5px;
+        .aboutImages{
+            border-radius:20px;
+            width:95%;
+            padding:5px;
         }
     }
     .bubblesContainer,.main{
         display:None;
     }
+
 }
 @media screen and (max-width: 600px) {
     .infoContainer{    
@@ -280,6 +280,7 @@
         width:100%;
         padding:0;
         margin:0;
+
     }
     .title{
         font-size:30px;
@@ -287,21 +288,31 @@
     }
     .MobileViewAbout{
         display: block;
+        .infoTitle{
+            padding:10px;
+            text-align: center;
+            margin: 10px auto;
 
+        }
         .infoContents{
             width:90%;
-            margin:10px;
             padding:5px;
         }
-        .item{
-            width:95%;
-            padding:10px;
-        
+        .infoText,.infoImage {
+            height:fit-content;
+            width:90%;
+            padding:5px;
+            text-align: center;
         }
-        img{
-            border-radius:5px;
+        .aboutImages{
+            border-radius:20px;
+            width:95%;
+            padding:5px;
+
         }
     }
+    
+
     .bubblesContainer,.main{
         display:None;
     }
