--- a/css/page/_features.scss
+++ b/css/page/_features.scss
@@ -6,6 +6,7 @@
     background-color: $magnoliaWhite-color;
     box-shadow: 0 3px 5px $jet-color;
     border-radius: 20px;
+    height:300px;
 }
 .MobileView{
     display:None;
@@ -80,6 +81,12 @@
 
 @media screen and (max-width: 800px) {
     .MobileView{display:block}
+    .item{
+        width:90%;
+        padding:0;
+        margin:10px auto;
+        text-align: center;
+    }
     .title{
         margin:40px;
         padding:20px;
@@ -103,24 +110,35 @@
 }
 
 @media screen and (max-width: 600px) {
-    .MobileView{display:block}
+    .main{
+        display:none;
+    }
+   
+    .item{
+        width:90%;
+        padding:0;
+        margin:10px auto;
+        text-align: center;
+    }
+    .MobileView{
+        margin:10px;
+        display:block}
     .title{
         padding:10px;
         text-align: center;
         font-size: 40px;
-
     }
     .featureContainer {
         flex-direction: column;
         width:90%;
         box-shadow: none;
         .featureInfo {
-            width: 70%;
+            width: 100%;
             margin:0;
         }
         .item{
+            width:100%;
             margin:0;
-            width:95%;
             padding:10px;
         }
     }
