--- a/css/page/_question.scss
+++ b/css/page/_question.scss
@@ -82,6 +82,7 @@ button {
 }
 
 .question2-container{
+
     background-color: $polishedPine-color;
     width: 70%;
     height: 30%;
@@ -91,11 +92,10 @@ button {
     border-radius: 20px;
     margin-bottom: 20px;
 
-
     .question2-text {
         font-size: 30px;
         margin-bottom: 15px;
-        margin-top: 10px;
+        margin-top: 15px;
         color: white;
     }
 
@@ -105,32 +105,155 @@ button {
         text-align: left;
     }
 
-    .option-btn {
-        width: 300px;
-        height: 60px;
-        font-size: 20px;
-        border-radius: 30px;
-        border: none;
-        margin: 20px;
-    }
+    .group {
 
-    .question-form {
-        text-align: left;
-        padding-left: 30px;
-        padding-right: 20px;
-
+        display: flex;
+        flex-direction: row;
+        color: #fff;
+        margin-left: auto;
+        margin-right: auto;
+        width: 70%;
+        margin-bottom: 15px;
+    
+    
+        input[type = "radio"] {
+            visibility: hidden;
+            height: 0;
+            width: 0;
+        }
+    
         label {
-            font-size: 25px;
+            display: flex;
+            flex: auto;
+            vertical-align: middle;
+            align-items: center;
+            justify-content: center;
+            background-color: $platinum-color;
+            color: black;
+            padding: 5px 10px;
+            border-radius: 50px;
+            height: 50px;
+            margin: 15px;
+            font-size: 23px;
+            font-weight: 500;
+        }
+    
+        input[type="radio"]:checked + label {
+            background-color: $maximumBluePurple-color;
             color: white;
         }
+    
+        input[type="radio"]:hover:not(:checked) + label {
+            color: $maximumBluePurple-color;
+        }
+    
+    }
 
-        input {
-            margin: 20px;
-           
+
+
+    .question-form {
+        // text-align: left;
+        // padding-left: 30px;
+        // padding-right: 20px;
+        // margin-bottom: 15px;
+
+        // label {
+        //     font-size: 25px;
+        //     color: white;
+        // }
+
+        // input {
+        //     margin: 20px;
+
+        // }
+
+        position: relative;
+        display: flex;
+        width: 500px;
+        height: 3em;
+        line-height: 3;
+        overflow: hidden;
+        border-radius: .25em;
+        margin-left: auto;
+        margin-right: auto;
+        color: white;
+        margin-bottom: 20px;
+
+
+        select {
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            -ms-appearance: none;
+            appearance: none;
+            outline: 0;
+            box-shadow: none;
+            border: 0 !important; 
+            background-image: none;
+            background-color: $platinum-color;
+          }
+
+        select::-ms-expand {
+            display: none;
+        }
+
+        select {
+            flex: 1;
+            padding-left: 20px;
+            color: black;
+            cursor: pointer;
+            font-size: 20px;
+        }
+
+    }
+
+    .question-form::after {
+        content: '\25BC';
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding: 0 1em;
+        background: $maximumBluePurple-color;
+        cursor: pointer;
+        pointer-events: none;
+    }
+
+    .question-form:hover::after {
+        color: $orangeYellowCrayola-color;
+    }
+
+    @media (max-width: 800px) {
+        .group{
+          flex-direction: column;
+          height: auto;
+
+          label {
+              width: auto;
+          }
+        }
+
+        .question-form {
+            margin-bottom: 20px;
+            padding: 20px;
+            width: 80%;
+        }
+
+        .question-form::after {
+            top: 20px;
+            right: 15px;
+        }
+
+        .question2-text {
+            padding: 10px;
+            padding-bottom: 0;
         }
     }
 
+    
+
 }
+
+
+
 
 .question-submit-html {
     text-align: center;
@@ -140,7 +263,6 @@ button {
 .question-submit-body {
     background-color: white;
     
-
     h2 {
         font-size: 40px;
         color: $polishedPine-color;
@@ -148,7 +270,6 @@ button {
         margin-bottom: 50px;
 
     }
-  
 
     .progress {
         width: 80%;
