--- a/css/page/_home.scss
+++ b/css/page/_home.scss
@@ -13,6 +13,10 @@ html {
     width: 10%;
 }
 
+.welcome-description{
+    font-size: 1.5em;
+}
+
 nav {
     display: flex;
     justify-content: space-around;
