fixed login page

--- a/css/page/_home.scss
+++ b/css/page/_home.scss
@@ -2,7 +2,7 @@ body {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    background-color: #7ea9a4;
+    background-color: $polishedPine-color;
 }
 
 html {
