--- a/css/page/_login.scss
+++ b/css/page/_login.scss
@@ -40,5 +40,13 @@
         text-align: center;
     }
 
+    &__link{
+        text-decoration: none;
+        color:white;
+        &:hover{
+            color: black;
+        }
+    }
+
 
 }
