--- a/css/page/_contact.scss
+++ b/css/page/_contact.scss
@@ -8,9 +8,8 @@
     margin-left: auto;
     margin-right: auto;
     text-align: left;
-
-    
-    input, textarea {
+    input,
+    textarea {
         margin: 10px;
         width: 200px;
         height: 40px;
@@ -23,19 +22,15 @@
         font-weight: 600;
         font-size: 15px;
     }
-
-    #email{
+    #email {
         width: 425px;
- 
     }
-
     label {
         padding-left: 10px;
         font-weight: 500;
         color: white;
         font-size: 20px;
     }
-
     #msg {
         width: 425px;
         margin-left: 10px;
@@ -43,9 +38,7 @@
         text-align: left;
         padding-top: 10px;
         resize: none;
-
     }
-
     #send-btn {
         width: 150px;
         height: 40px;
@@ -55,7 +48,6 @@
         border: none;
         background-color: $orangeYellowCrayola-color;
         font-size: 18px;
-
     }
 }
 
