--- a/css/page/_signup.scss
+++ b/css/page/_signup.scss
@@ -13,6 +13,7 @@ input {
     border-radius: 10px;
     margin-bottom: 20px;
     border: none;
+    font-family: $quicksand-font;
 }
 
 label.headings {
