--- a/css/page/_contact.scss
+++ b/css/page/_contact.scss
@@ -28,7 +28,7 @@
     label {
         padding-left: 10px;
         font-weight: 500;
-        color: white;
+        color: black;
         font-size: 20px;
     }
     #msg {
@@ -53,7 +53,7 @@
 
 .contact-body {
     h2 {
-        color: white;
+        color: black;
         margin-top: 5%;
         margin-bottom: 40px;
         font-size: 40px;
