update: code was messed up. Fixed

--- a/css/page/_about.scss
+++ b/css/page/_about.scss
@@ -269,7 +269,7 @@
             padding:5px;
         }
     }
-    .bubblesContainer,.main{
+    .bubblesContainer,.mainA{
         display:None;
     }
 
@@ -313,7 +313,7 @@
     }
     
 
-    .bubblesContainer,.main{
+    .bubblesContainer,.mainA{
         display:None;
     }
 }
