--- a/css/page/_signup.scss
+++ b/css/page/_signup.scss
@@ -16,32 +16,32 @@
         border: 1px solid black;
         font-family: $quicksand-font;
     }
-    label.headings {
+    label.register-body-headings {
         font-weight: bold;
     }
-    label.desc {
+    label.register-body-desc {
         font-size: 15px;
     }
     input.submit {
         text-align: center;
     }
-    #gender {
+    #register-body-gender {
         border-radius: 10px;
         height: 30px;
     }
-    #age {
+    #register-body-age {
         width: 125px;
     }
-    #date {
+    #register-body-date {
         width: 435px;
     }
-    #location {
+    #register-body-location {
         width: 435px;
     }
-    #email {
+    #register-body-email {
         width: 435px;
     }
-    #username {
+    #register-body-username {
         width: 435px;
     }
 }
