--- a/css/page/_home.scss
+++ b/css/page/_home.scss
@@ -13,7 +13,7 @@ html {
     width: 10%;
 }
 
-.welcome-description{
+.welcome-description {
     font-size: 1.5em;
 }
 
@@ -67,7 +67,7 @@ h2 {
 }
 
 .btn {
-    border: 1px solid white;
+    border: 1px solid black;
     background: none;
     padding: 10px 20px;
     font-size: 20px;
@@ -81,12 +81,12 @@ h2 {
 
 .btn1,
 .btn2 {
-    color: white;
+    color: black;
 }
 
 .btn1:hover,
 .btn2:hover {
-    color: black;
+    color: white;
 }
 
 .btn::before {
@@ -95,7 +95,7 @@ h2 {
     left: 0;
     width: 100%;
     height: 0%;
-    background: white;
+    background: black;
     z-index: -1;
     transition: 0.8s;
 }
@@ -113,14 +113,13 @@ h2 {
 
 .home-body {
     overflow: hidden;
-
     .vector {
         width: 40%;
         z-index: 4;
         margin-top: 200px;
         background: none;
     }
-    .bg{
+    .bg {
         height: 80%;
         width: 1100px;
         float: right;
@@ -128,144 +127,139 @@ h2 {
 }
 
 .header {
-// background-color: $orangeYellowCrayola-color;
-// background-color: #FDB9A9;
-position: fixed;
-width: 100%;
-z-index: 3;
+    // background-color: $orangeYellowCrayola-color;
+    // background-color: #FDB9A9;
+    position: fixed;
+    width: 100%;
+    z-index: 3;
 }
 
 .header ul {
-margin: 0;
-padding: 0;
-list-style: none;
-overflow: hidden;
-// background-color:  $orangeYellowCrayola-color;
-background-color: #FDB9A9;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    overflow: hidden;
+    // background-color:  $orangeYellowCrayola-color;
+    background-color: #FDB9A9;
 }
 
 .header li a {
-display: block;
-padding: 20px 20px;
-text-decoration: none;
-font-size: 20px;
+    display: block;
+    padding: 20px 20px;
+    text-decoration: none;
+    font-size: 20px;
 }
 
 .header .logo {
-display: block;
-float: left;
-padding: 10px 100px;
-text-decoration: none;
+    display: block;
+    float: left;
+    padding: 10px 100px;
+    text-decoration: none;
     img {
         width: 150px;
     }
 }
 
+
 /* menu */
 
 .header .menu {
-clear: both;
-max-height: 0;
-transition: max-height .2s ease-out;
+    clear: both;
+    max-height: 0;
+    transition: max-height .2s ease-out;
 }
+
 
 /* menu icon */
 
 .header .menu-icon {
-display: inline-block;
-float: right;
-padding: 28px 20px;
-position: relative;
-user-select: none;
+    display: inline-block;
+    float: right;
+    padding: 28px 20px;
+    position: relative;
+    user-select: none;
 }
 
 .header .menu-icon .navicon {
-background: #333;
-display: block;
-height: 2px;
-position: relative;
-width: 18px;
-margin-top: 15px;
+    background: #333;
+    display: block;
+    height: 2px;
+    position: relative;
+    width: 18px;
+    margin-top: 15px;
 }
 
 .header .menu-icon .navicon:before,
 .header .menu-icon .navicon:after {
-background: #333;
-content: '';
-display: block;
-height: 100%;
-position: absolute;
-transition: all .2s ease-out;
-width: 100%;
-
+    background: #333;
+    content: '';
+    display: block;
+    height: 100%;
+    position: absolute;
+    transition: all .2s ease-out;
+    width: 100%;
 }
 
 .header .menu-icon .navicon:before {
-top: 5px;
-
+    top: 5px;
 }
 
 .header .menu-icon .navicon:after {
-top: -5px;
+    top: -5px;
 }
+
 
 /* menu btn */
 
 .header .menu-btn {
-display: none;
+    display: none;
 }
 
-.header .menu-btn:checked ~ .menu {
-max-height: 500px;
+.header .menu-btn:checked~.menu {
+    max-height: 500px;
 }
 
-.header .menu-btn:checked ~ .menu-icon .navicon {
-background: transparent;
+.header .menu-btn:checked~.menu-icon .navicon {
+    background: transparent;
 }
 
-.header .menu-btn:checked ~ .menu-icon .navicon:before {
-transform: rotate(-45deg);
+.header .menu-btn:checked~.menu-icon .navicon:before {
+    transform: rotate(-45deg);
 }
 
-.header .menu-btn:checked ~ .menu-icon .navicon:after {
-transform: rotate(45deg);
+.header .menu-btn:checked~.menu-icon .navicon:after {
+    transform: rotate(45deg);
 }
 
-.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
-.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
-top: 0;
+.header .menu-btn:checked~.menu-icon:not(.steps) .navicon:before,
+.header .menu-btn:checked~.menu-icon:not(.steps) .navicon:after {
+    top: 0;
 }
 
 
 /* 48em = 768px */
 
 @media (min-width: 48em) {
-    
-.header li {
-    float: left;
-    // margin: 50px;
-    // margin-top: 5px;
-}
-.header li a {
-    padding: 20px 30px;
-}
-.header .menu {
-    clear: none;
-    float: right;
-    max-height: none;
-
-}
-.header .menu-icon {
-    display: none;
-    
-}
-
-
+    .header li {
+        float: left;
+        // margin: 50px;
+        // margin-top: 5px;
+    }
+    .header li a {
+        padding: 20px 30px;
+    }
+    .header .menu {
+        clear: none;
+        float: right;
+        max-height: none;
+    }
+    .header .menu-icon {
+        display: none;
+    }
 }
 
 @media (max-width: 800px) {
     .header .logo {
         // display: none;
-    
     }
 }
